--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "start": "npm run build && node dist/index.js",
     "dev": "nodemon src/index.ts"
   },
-  "prisma": {
-    "schema": "./prisma/models"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,6 +19,7 @@
     "@types/multer": "^1.4.13",
     "@types/node": "^24.0.3",
     "@types/nodemailer": "^6.4.17",
+    "@types/streamifier": "^0.1.2",
     "nodemon": "^3.1.10",
     "prisma": "^6.10.1",
     "ts-node": "^10.9.2",
@@ -30,12 +28,15 @@
   "dependencies": {
     "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "streamifier": "^0.1.1"
   }
 }
