--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
-    "streamifier": "^0.1.1"
+    "redis": "^5.5.6",
+    "streamifier": "^0.1.1",
+    "winston": "^3.17.0"
   }
 }
